--- a/src/App.css
+++ b/src/App.css
@@ -19,75 +19,132 @@
   margin-left: 24%;
   font-size: 90%;
 }
-.Volunteer-div{
+.Volunteer1{
   z-index: 1;
-  align-items: center;
-  display: inline-flex;
-  justify-content: space-around;
-  width:100%;
-  height: 600px;
+  height:100%;
+  width:50%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
   position: absolute;
+  animation-name:move4;
+  animation-duration: 2s;
 }
+@keyframes move4{
+  0%{left:10%;top:0px}
+  100%{left:40%;top:0px}
+}
+.Volunteer2{
+  z-index: 1;
+  height:100%;
+  width:50%;
+  margin-left: 10%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  position: absolute;
+  animation-name:move3;
+  animation-duration: 2s;
+}
+@keyframes move3{
+  0%{right:10%;top:0px}
+  100%{right:40%;top:0px}
+}
+.Volunteer3{
+  z-index: 1;
+  margin:auto 40%;
+  height:100%;
+  width:50%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  position: absolute;
+
+}
+.Volunteer4{
+  z-index: 1;
+  margin-left: 10%;
+  height:100%;
+  width:50%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  position: absolute;
+
+}
+
 .SignIn{
   background-color: aqua;
   display: flex;
-  width: 40%;
+  width: 30%;
   height: 100%;
   align-items: center;
   justify-content: center;
 }
-.CreateAnAccount{
-  display: flex;
-  width: 40%;
+.CreateAnAccount-div{
   height: 100%;
-  background-color: aqua;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
+  text-align: center;
+  justify-items: center;
+  line-height: 3;
+}
+.CreateAnAccount-input{
+  height:30px;
+  width:50%;
+  border-radius: 5px;
+  border-width: 1px;
+  text-indent: 6px;
 }
 .container{
   z-index: 0;
-  height:600px;
+  display: inline-flex;
+  height:700px;
   width:100%;
-  position: relative;
+  position: fixed;
+  flex: 100%;
+  
 }
 .blanket1{
   z-index: 2;
-  height:600px;
+  margin-right: -10%;
+  height:100%;
   width:50%;
-  background-color: blue;
+  background-color: rgba(0, 134, 196, 0.966);
   position: absolute;
   animation-name:move2;
   animation-duration: 2s;
 }
 @keyframes move2{
   0%{right:0px;top:0px}
-  100%{right:50%;top:0px}
-}
-.blanket3{
-  z-index: 2;
-  height:600px;
-  width:50%;
-  background-color: blue;
-  position: absolute;
-}
-.blanket4{
-  margin:auto 50%;
-  z-index: 2;
-  height:600px;
-  width:50%;
-  background-color: blue;
-  position: absolute;
+  100%{right:70%;top:0px}
 }
 .blanket2{
   z-index: 2;
-  height:600px;
+  height:100%;
   width:50%;
-  background-color: blue;
+  margin-left: -10%;
+  background-color: rgba(0, 134, 196, 0.966);
   position: absolute;
   animation-name:move1;
   animation-duration: 2s;
 }
 @keyframes move1{
   0%{left:0px;top:0px}
-  100%{left:50%;top:0px}
+  100%{left:70%;top:0px}
+}
+.blanket3{
+  z-index: 2;
+  height:100%;
+  width:50%;
+  margin-left: -10%;
+  background-color: rgba(0, 134, 196, 0.966);
+  position: absolute;
+}
+.blanket4{
+  margin:auto 60%;
+  z-index: 2;
+  height:100%;
+  width:50%;
+  background-color: rgba(0, 134, 196, 0.966);
+  position: absolute;
 }
