--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .notfound {
@@ -35,6 +36,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%);
   font-size: 252px;
   font-weight: 900;
   margin: 0px;
